# exptool

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.txt  __init__.py  ellipse_tools.py  ellipse_tools_test.py  eof.py  globalquantities.py  halo_methods.py  helpers.py  integrate.py  kde_3d.py  kmeans.py  orbit.py  plotter.py  potential.py  psp_io.py  psp_io_legacy.py  pyproject.toml  setup.py  spheresl.py  test_requirements.txt  trapping.py  utils.py  visualize.py
.github/workflows/: continuousintegration.yaml
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
docs/tutorials/: OutCoef-Tutorial.ipynb  Trapping-Verification.ipynb
exptool/: __init__.py
exptool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
exptool/analysis/: __init__.py  centering.py  commensurability.py  directdetection.py  ellipse_tools.py  ellipsetools.py  forcetrace.py  globalquantities.py  pattern.py  resonancemodel.py  rotationcurves.py  trapping.py
exptool/basis/: __init__.py  bsplinebasis.py  cluttonbrock.py  compatibility.py  component.py  eof.py  hernquist.py  laguerre.py  potential.py  spheresl.py  spheresl_deprecated.py  validate.py
exptool/example_workflows/: Get_corot_lindblads.ipynb  freeze_fields_run_orbits.ipynb
exptool/io/: TODO.txt  __init__.py  outcoef.py  particle.py  psp.py  psp_io.py  psp_to_hdf5.py  spl_io.py  visualize.py
exptool/models/: __init__.py  arbitrarypotential.py  distributionfunction.py  exponentialdisc.py  hernquist.py  icosphere.py  isochrone.py  isothermal.py  logpot.py  milkyway.py  (+9 more)
tests/: context.py  importtest.py  test_basic.py
(+34 files in other folders)
